Added count endpoint
