# api/src/openapi/openapi.yaml
@@ -20,7 +20,36 @@ paths:
         - calories
       summary: Getting ingredients given an image
       description: Invoke this endpoint to get ingredients given an image.
-      operationId: src.api.count.ingredients_post
+      operationId: src.api.calories.ingredients_post
+      requestBody:
+        required: true
+        description: Body wrapper for the request.
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/IngredientsBody"
+      responses:
+        200:
+          description: Standard Food Lord API JSON response. You should check the `error` attribute to determine if there was an error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/APIResponse'
+        default:
+          description: Unexpected error.
+          content:
+            application/text:
+              schema:
+                type: string
+                description: Error description.
+
+  /calories/count:
+    post:
+      tags:
+        - calories
+      summary: Counting calories given a list of ingredients
+      description: Invoke this endpoint to count calories given a list of ingredients.
+      operationId: src.api.calories.count_post
       requestBody:
         required: true
         description: Body wrapper for the request.
@@ -59,7 +88,7 @@ components:
           type: object
           description: Contains the response data if the request was successful.
 
-    CountBody:
+    IngredientsBody:
       type: object
       properties:
         image_url:
@@ -68,3 +97,12 @@ components:
         image_base64:
           type: string
           description: Image safe-decoded in base64.
+
+    CountBody:
+      type: object
+      properties:
+        ingredients_list:
+          type: array
+          description: List of ingredients.
+          items:
+            type: string
